# PX_Device_Interfaces

./: .bumpversion.cfg  .gitignore  MANIFEST.in  README.md  TODO.md  __init__.py  arduino_GPIO_lib.py  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
arduino/ESP_WROOM_SD_FW_UPDATE/: ESP_WROOM_SD_FW_UPDATE.ino  oled.h  update_mngr.h
arduino/Firmware_Remote/: Firmware_Remote.ino  Flapp.h  oled.h
arduino/GPIO_Lib_master/: GPIO_Lib_master.ino  README.md  gpio_lib_commands.h  oled.cpp  oled.h  powerSystem.cpp  powerSystem.h  settings.h  update_mngr.h
arduino/arduino_GPIO_lib/: arduino_GPIO_lib.ino  settings.h
arduino/gpio_lib_firmware_update_test/: main.py
docs/: SETUP.md
firmware/GPIO_Lib_Firmware/: GUIDELINES.md  platformio.ini  platformio.ini.bak
px_device_interfaces/: GPIO_Lib.py  __init__.py  arduino_GPIO_lib.py  connection_organiser_adapter.py  connection_organiser_with_opc.py  opc_GPIO_lib.py  settings_manager.py  timer.py
px_device_interfaces.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
px_device_interfaces/examples/: blink_led13.py  blink_led13_configured.py  blink_pin_configured.py
px_device_interfaces/tests/: test_gpio_mock.py  test_opcua_transport_real.py  test_transports.py
px_device_interfaces/tools/: opcua_list_nodes.py  test.sh  test_connection_adapter.py  test_connection_adapter_stress.py  (+2 more)
python/: __init__.py  arduino_GPIO_lib.py  connection_organiser_with_opc.py  opc_GPIO_lib.py  timer.py
scripts/: setup_venv.sh  stest_usb.py
tools/: bump_version.py
(+39 files in other folders)
